--- a/app/plantillas/crear_pelicula.html
+++ b/app/plantillas/crear_pelicula.html
@@ -1,9 +1,24 @@
 <h1>Crear Peliculas</h1>
 <hr>
 
-<p>Titulo<input type="text" #titulo /></p>
-<p>Director<input type="text" #director /></p>
-<p>Año<input type="number" #anio /></p>
+<form #miFormulario="ngForm" (ngSubmit)="onSubmit()">
 
-<br>
-<input type="submit" value="Agregar Pelicula" (click)="agregarPelicula(titulo.value, director.value, anio.value)" />
+    <p>Titulo
+        <input type="text" #titulo="ngForm" ngControl="titulo" [(ngModel)]="nuevaPelicula.titulo" required />
+        <span *ngIf="!titulo.valid">No valido</span>
+    </p>
+
+    <p>Director
+        <input type="text" #director="ngForm" ngControl="director" [(ngModel)]="nuevaPelicula.director" required pattern="[A-Za-z]*" />
+        <span *ngIf="!director.valid">No valido</span>
+    </p>
+
+    <p>Año
+        <input type="number" #anio="ngForm" ngControl="anio" [(ngModel)]="nuevaPelicula.anio" required pattern="[0-9]{4}" />
+        <span *ngIf="!anio.valid">No valido</span>
+    </p>
+
+    <br>
+    <input type="submit" value="Agregar Pelicula" [disabled]="!miFormulario.form.valid" />
+
+</form>
